# string_pool

./: .gitignore  CMakeLists.txt  main.c
common/: alloc.c  alloc.h  area.c  area.h  arena.c  arena.h  debug.c  debug.h  error_handling.h  hash.c  hash.h  maths.h  memory_leak.c  memory_leak.h
string_pool/: alloc.c  alloc.h  api.h  config.h  global_pool.c  global_pool.h  private.h  scope_context.c  scope_context.h  string.c  string.h  string_builder.c  string_builder.h  string_page.c  string_page.h  string_pool.c  string_pool.h  string_pool_api.h  string_pool_extra.h  string_pool_types.h
